[gd_scene load_steps=16 format=3 uid="uid://cbsvxx2gy8h1r"]

[ext_resource type="Script" path="res://actor/partner/partner.gd" id="1_fu0xo"]
[ext_resource type="Texture2D" uid="uid://cduuc14pwqieg" path="res://actor/partner/sprites/partner_idle.png" id="2_0pc76"]
[ext_resource type="PackedScene" uid="uid://c1bfg7ajxvtja" path="res://actor/hitbox/partner/partner_hitbox.tscn" id="3_c2flw"]
[ext_resource type="Script" path="res://misc/audio/spatial/queue/spatial_audio_queue.gd" id="4_u3nts"]
[ext_resource type="AudioStream" uid="uid://clouonab2h2cg" path="res://actor/partner/sfx/land/partnerland.ogg" id="5_s6hw5"]
[ext_resource type="AudioStream" uid="uid://dwv5uqxs1177g" path="res://actor/partner/sfx/switch/Randomize21.wav" id="6_rerb2"]
[ext_resource type="AudioStream" uid="uid://hmaalov0op45" path="res://actor/partner/sfx/ghost/Randomize46.mp3" id="7_df7np"]
[ext_resource type="AudioStream" uid="uid://crre2q7vihvpn" path="res://actor/partner/sfx/jump/partner_jump.ogg" id="7_qlkbg"]
[ext_resource type="AudioStream" uid="uid://dbm3vrxqmwme4" path="res://actor/partner/sfx/hurt/Blip_Select13.wav" id="9_noc3f"]
[ext_resource type="AudioStream" uid="uid://wng28q7n2p2j" path="res://actor/partner/sfx/return/Randomize17.wav" id="10_2rwbh"]

[sub_resource type="Curve" id="Curve_rnq55"]
_data = [Vector2(0, 0.373626), 0.0, -0.935499, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_vo8uq"]
max_value = 100.0
_data = [Vector2(0, 100), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_oefgu"]
offsets = PackedFloat32Array(0.46, 1)
colors = PackedColorArray(1, 0, 0, 1, 2.93297e-08, 0.0305117, 0.0574219, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_787sj"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1mu4y"]
radius = 6.08276

[node name="Partner" type="CharacterBody2D" groups=["Hitstopped", "Partner"]]
z_index = 1
collision_layer = 2
collision_mask = 132
script = ExtResource("1_fu0xo")
follow_distance = 15.0
homing_speed = 140.0
max_distance = 150.0
pause_duration = 0.4
max_health = 3
speed = 100.0
jump_velocity = -250.0
acceleration = 1000.0
deceleration = 1000.0

[node name="Particles" type="Node2D" parent="."]
scale = Vector2(0.1, 0.1)

[node name="LandParticles" type="CPUParticles2D" parent="Particles"]
emitting = false
amount = 50
lifetime = 0.3
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, -980)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
angular_velocity_min = 72.73
angular_velocity_max = 392.73
scale_amount_curve = SubResource("Curve_rnq55")

[node name="GhostParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2(1.90735e-06, 0)
amount = 2000
lifetime = 0.3
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
damping_min = 1.0
damping_max = 5.0
damping_curve = SubResource("Curve_vo8uq")
scale_amount_min = 2.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_oefgu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0pc76")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_787sj")

[node name="Timer" type="Timer" parent="."]

[node name="Boxes" type="Node2D" parent="."]

[node name="PartnerHurtbox" type="Area2D" parent="Boxes"]
collision_layer = 2
collision_mask = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxes/PartnerHurtbox"]
shape = SubResource("CircleShape2D_1mu4y")

[node name="PartnerHitbox" parent="Boxes" instance=ExtResource("3_c2flw")]
damage = 1

[node name="Audio" type="Node2D" parent="."]

[node name="LandSFX" type="Node2D" parent="Audio"]
script = ExtResource("4_u3nts")
audio_stream = ExtResource("5_s6hw5")

[node name="SwitchSFX" type="Node2D" parent="Audio"]
script = ExtResource("4_u3nts")
audio_count = 2
audio_stream = ExtResource("6_rerb2")

[node name="JumpSFX" type="Node2D" parent="Audio"]
script = ExtResource("4_u3nts")
audio_stream = ExtResource("7_qlkbg")

[node name="HurtSFX" type="Node2D" parent="Audio"]
script = ExtResource("4_u3nts")
audio_stream = ExtResource("9_noc3f")

[node name="ReturnSFX" type="Node2D" parent="Audio"]
script = ExtResource("4_u3nts")
audio_stream = ExtResource("10_2rwbh")

[node name="GhostSFX" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("7_df7np")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Boxes/PartnerHurtbox" to="." method="_on_hurtbox_area_entered"]
